# RustGameEngine

./: .gitignore  Cargo.toml  PLAN.md  README.md
.claude/: settings.local.json
demo/: editor.rs  game.rs  main.rs
scripts/: local_matchmaker_flow.sh
src/: lib.rs
src/app/: core.rs  editor_runner.rs  game_runner.rs  mod.rs
src/components/: color.rs  health.rs  mod.rs  shape.rs  tag.rs  transform.rs  velocity.rs
src/ecs/: command_buffer.rs  component.rs  entity.rs  mod.rs  resource.rs  scene_tree.rs  system.rs  world.rs
src/editor/: camera.rs  mod.rs  state.rs
src/math/: mat4.rs  mod.rs  transform.rs  vec2.rs  vec3.rs
src/messaging/: bus.rs  message.rs  mod.rs
src/multiplayer/: matchmaking.rs  mod.rs  net_types.rs  rollback.rs  session.rs
src/platform/: mod.rs  traits.rs  windows.rs  winit.rs
src/renderer/: context.rs  draw.rs  imgui_layer.rs  mod.rs  pipeline.rs
src/scene/: data.rs  mod.rs
src/systems/: debug.rs  health.rs  mod.rs  movement.rs  sinusoid.rs
