[package]
name = "forge_ecs"
version = "0.1.0"
edition = "2021"

[lib]
name = "forge_ecs"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "demo/main.rs"

[dependencies]
winit = "0.30"
wgpu = "25"
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
