[package]
name = "forge_ecs"
version = "0.1.0"
edition = "2021"

[lib]
name = "forge_ecs"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "demo/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
renet = "2.0"
serde = { version = "1.0", features = ["derive"] }
winit = "0.30"
wgpu = "25"
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"

[[bin]]
name = "matchmaker"
path = "src/bin/matchmaker.rs"

[[bin]]
name = "matchmaker_client"
path = "src/bin/matchmaker_client.rs"
